Set up for model training and create config files

--- a/1-Preprocessing.ipynb
+++ b/1-Preprocessing.ipynb
@@ -35,6 +35,7 @@
     "import pandas as pd\n",
     "import rioxarray as rx\n",
     "import utils\n",
+    "from PreprocessingConfig import Config\n",
     "\n",
     "from pprint import pprint\n",
     "from rasterio.enums import Resampling\n",
@@ -43,6 +44,25 @@
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "1ebdd530",
+   "metadata": {},
+   "source": [
+    "## Load configuration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5269b1f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config = Config()"
    ]
   },
   {
@@ -72,10 +92,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir_2 = \"iNaturalist_traits/maps_iNaturalist/2_deg/ln\"\n",
-    "fns = glob.glob(os.path.join(data_dir_2, \"*.tif\"))\n",
+    "inat_fns_2deg = config.iNat_fns(\"2\")\n",
     "\n",
-    "plot_traits(fns, 4)"
+    "plot_traits(inat_fns_2deg, 4)"
    ]
   },
   {
@@ -94,8 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trait_05_data = \"iNaturalist_traits/maps_iNaturalist/0.5_deg/ln/\"\n",
-    "trait_fns = glob.glob(os.path.join(trait_05_data, \"*.tif\"))\n",
+    "trait_fns = config.iNat_fns()\n",
     "\n",
     "trait_gdfs = []\n",
     "for trait_fn in trait_fns:\n",
@@ -131,8 +149,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bio_data = \"./data/worldclim/bio\"\n",
-    "bio_fns = glob.glob(os.path.join(bio_data, \"*.tif\"))\n",
+    "bio_vars = [1, 4, 7, 12, 13, 14, 15]\n",
+    "bio_fns = config.WC_fns(bio_vars)\n",
     "\n",
     "bios = []\n",
     "for bio_fn in bio_fns:\n",
@@ -168,7 +186,28 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "439fab32",
+   "id": "2f793fff",
+   "metadata": {},
+   "source": [
+    "Compute Preciptation Annual Range by subtracting BIO14 from BIO13"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56668ae3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bio_13 = bio_gdfs.loc[:, [\"bio_13\" in x for x in bio_gdfs.columns]].values\n",
+    "bio_14 = bio_gdfs.loc[:, [\"bio_14\" in x for x in bio_gdfs.columns]].values\n",
+    "bio_gdfs[\"wc2.1_10m_bio_13-14\"] = bio_13 - bio_14"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "4c691317",
    "metadata": {},
    "source": [
     "## Load monthly MODIS products for 2000"
