--- a/1-Preprocessing.ipynb
+++ b/1-Preprocessing.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e2f642f2-ef7d-4eb2-83db-d03875c8cc5a",
    "metadata": {},
@@ -11,6 +12,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6a1a7a0f-4293-4dd7-a907-bfafb226d0ab",
    "metadata": {},
@@ -130,7 +132,7 @@
    "id": "5d31196e",
    "metadata": {},
    "source": [
-    "## Load climate data"
+    "## WorldClim data"
    ]
   },
   {
@@ -210,16 +212,7 @@
    "id": "4c691317",
    "metadata": {},
    "source": [
-    "## Load monthly MODIS products for 2000"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "5a91f0b3",
-   "metadata": {},
-   "source": [
-    "**TODO:** Import, aggregate, and upsample monthly MODIS products for year of 2000-01"
+    "## MODIS Terra Surface Reflectance bands 1-5"
    ]
   },
   {
@@ -228,7 +221,10 @@
    "id": "dbedb66d",
    "metadata": {},
    "source": [
-    "Initialize Google Earth Engine"
+    "1. Get bands 1-5 of MODIS Terra Surface Reflectance dataset\n",
+    "2. mask clouds\n",
+    "3. aggregate into monthly collections\n",
+    "4. export to Google Drive with a target resolution of ~1km at the equator (0.008983152841195, -0.008983152841195)"
    ]
   },
   {
@@ -238,92 +234,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Initialize Google Earth Engine\n",
     "import ee\n",
     "\n",
     "# ee.Authenticate() # Uncomment if not already authenticated\n",
-    "ee.Initialize()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "60712287",
-   "metadata": {},
-   "source": [
-    "Get MODIS Terra Surface Reflectance image collection for its first year of operation (2000-03-01 - 2001-03-01)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "201da793",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "ee.Initialize()\n",
+    "\n",
+    "# Get MODIS Terra Surface Reflectance image collection for its first year of operation\n",
+    "# (2000-03-01 - 2001-03-01)\n",
     "ds, de = \"2000-03-01\", \"2001-03-02\"\n",
     "bands = [\"sur_refl_b01\", \"sur_refl_b02\", \"sur_refl_b03\", \"sur_refl_b04\", \"sur_refl_b05\"]\n",
+    "modis_tsr = ee.ImageCollection(\"MODIS/061/MOD09GA\").filterDate(ds, de)\n",
     "\n",
-    "modis_tsr = ee.ImageCollection(\"MODIS/061/MOD09GA\").filterDate(ds, de)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "74564a2f",
-   "metadata": {},
-   "source": [
-    "Mask clouds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "51e5d67d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Mask clouds\n",
     "qa_band = \"state_1km\"\n",
-    "modis_tsr_masked = utils.mask_clouds(modis_tsr, qa_band)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "1a8f7213",
-   "metadata": {},
-   "source": [
-    "Aggregate the image collection into monthly averages for each band"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "91b189a1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "modis_tsr_masked = utils.mask_clouds(modis_tsr, qa_band)\n",
+    "\n",
+    "# Aggregate the image collection into monthly averages for each band\n",
     "tsr_bands_monthly = []\n",
     "for band in bands:\n",
     "    monthly = utils.aggregate_ic(modis_tsr_masked.select(band), ds, de)\n",
-    "    tsr_bands_monthly.append(monthly)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "c0b64b2a",
-   "metadata": {},
-   "source": [
-    "Export images to Google Drive"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d989b9da",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    tsr_bands_monthly.append(monthly)\n",
+    "    \n",
+    "# Export images to Google Drive\n",
     "for band in tsr_bands_monthly:\n",
     "    utils.export_collection(band, \"MODIS\")"
    ]
@@ -331,10 +264,27 @@
   {
    "attachments": {},
    "cell_type": "markdown",
+   "id": "07c7c667",
+   "metadata": {},
+   "source": [
+    "5. Merge semi-global observations for each band/month"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b5980e0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
    "id": "8a0dcc5f",
    "metadata": {},
    "source": [
-    "Load exported MODIS data from disk"
+    "5. Load exported MODIS data from disk"
    ]
   },
   {
@@ -353,7 +303,7 @@
    "id": "9d14b191",
    "metadata": {},
    "source": [
-    "Downsample to match resolution of trait maps (0.5 deg)"
+    "6. Downsample to match resolution of trait maps (0.5 deg)"
    ]
   },
   {
@@ -372,7 +322,35 @@
    "id": "ebe9636f",
    "metadata": {},
    "source": [
-    "## Load soil data"
+    "## ISRIC soil data"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "da8eed9e",
+   "metadata": {},
+   "source": [
+    "1. Download soil data from [ISRIC](https://files.isric.org/soilgrids/latest/data/)\n",
+    "2. Reproject to WGS84, and resample to ~1km resolution"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "bfd7ac1e",
+   "metadata": {},
+   "source": [
+    "See `get_soil_data_multi.py`"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "a97934b9",
+   "metadata": {},
+   "source": [
+    "3. Reproject and downsample to Wolf trait maps CRS"
    ]
   },
   {
