Continue data preprocessing

--- a/1-Preprocessing.ipynb
+++ b/1-Preprocessing.ipynb
@@ -30,13 +30,15 @@
     "import glob\n",
     "import os\n",
     "\n",
+    "import ee\n",
     "import geemap\n",
     "import geopandas as gpd\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "from osgeo import gdal\n",
     "import pandas as pd\n",
     "import rioxarray as rx\n",
-    "import utils\n",
+    "import utils  # May need to autheniticate GEE before importing\n",
     "from PreprocessingConfig import Config\n",
     "\n",
     "from pprint import pprint\n",
@@ -45,25 +47,12 @@
     "from visualize import plot_traits\n",
     "\n",
     "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "1ebdd530",
-   "metadata": {},
-   "source": [
-    "## Load configuration"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5269b1f7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "%autoreload 2\n",
+    "\n",
+    "# ee.Authenticate() # Uncomment if not already authenticated\n",
+    "ee.Initialize()\n",
+    "\n",
+    "# Load configuration\n",
     "config = Config()"
    ]
   },
@@ -234,12 +223,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize Google Earth Engine\n",
-    "import ee\n",
-    "\n",
-    "# ee.Authenticate() # Uncomment if not already authenticated\n",
-    "ee.Initialize()\n",
-    "\n",
     "# Get MODIS Terra Surface Reflectance image collection for its first year of operation\n",
     "# (2000-03-01 - 2001-03-01)\n",
     "ds, de = \"2000-03-01\", \"2001-03-02\"\n",
@@ -271,30 +254,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6b5980e0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "8a0dcc5f",
+   "id": "6b5980e0",
    "metadata": {},
    "source": [
-    "5. Load exported MODIS data from disk"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "04512312",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load MODIS data"
+    "See `utils/merge_files.py`"
    ]
   },
   {
@@ -313,7 +278,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Downsample and mask MODIS data"
+    "# Downsample MODIS data and save to disk\n",
+    "fns_1km = sorted(glob.glob(os.path.join(config.MODIS_dir, \"1km/*.tif\")))\n",
+    "\n",
+    "for f in fns_1km:\n",
+    "    base = os.path.splitext(os.path.basename(f))[0].split(\"_1000m\")[0]\n",
+    "    kwargs = {\n",
+    "        \"format\": \"GTiff\",\n",
+    "        \"xRes\": 0.5,\n",
+    "        \"yRes\": 0.5,\n",
+    "        \"resampleAlg\": \"cubic\",\n",
+    "        \"creationOptions\": [\n",
+    "            \"TILED=YES\",\n",
+    "            \"COMPRESS=DEFLATE\",\n",
+    "            \"PREDICTOR=2\",\n",
+    "        ]\n",
+    "    }\n",
+    "    out_fn = os.path.join(config.MODIS_dir, \"0.5_deg\", f\"{base}_0.5_deg.tif\")\n",
+    "    ds = gdal.Warp(out_fn, f, **kwargs)\n",
+    "    del ds"
    ]
   },
   {
@@ -360,7 +343,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load soil data"
+    "# Load so# Downsample MODIS data and save to disk\n",
+    "p_dirs = sorted(glob.glob(os.path.join(config.soil_dir, \"*\")))\n",
+    "# fns_1km = sorted(glob.glob(os.path.join(config.MODIS_dir, \"1km/*.tif\")))\n",
+    "\n",
+    "for d in p_dirs:\n",
+    "    fns_1km = sorted(glob.glob(os.path.join(d, \"1km/*.tif\")))\n",
+    "\n",
+    "    for f in fns_1km:\n",
+    "        base = os.path.splitext(os.path.basename(f))[0].split(\"_1000m\")[0]\n",
+    "        kwargs = {\n",
+    "            \"format\": \"GTiff\",\n",
+    "            \"xRes\": 0.5,\n",
+    "            \"yRes\": 0.5,\n",
+    "            \"dstSRS\": \"EPSG:4326\",\n",
+    "            \"resampleAlg\": \"cubic\",\n",
+    "            \"creationOptions\": [\n",
+    "                \"TILED=YES\",\n",
+    "                \"COMPRESS=DEFLATE\",\n",
+    "                \"PREDICTOR=2\",\n",
+    "            ]\n",
+    "        }\n",
+    "        out_fn = os.path.join(d, \"0.5_deg\", f\"{base}_0.5_deg.tif\")\n",
+    "        # print(out_fn)\n",
+    "        ds = gdal.Warp(out_fn, f, **kwargs)\n",
+    "        del ds"
    ]
   }
  ],
