--- a/1-Preprocessing.ipynb
+++ b/1-Preprocessing.ipynb
@@ -31,20 +31,14 @@
     "import os\n",
     "\n",
     "import ee\n",
-    "import geemap\n",
-    "import geopandas as gpd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "from osgeo import gdal\n",
-    "import pandas as pd\n",
-    "import rioxarray as rx\n",
-    "import utils  # May need to autheniticate GEE before importing\n",
-    "from PreprocessingConfig import Config\n",
-    "\n",
-    "from pprint import pprint\n",
-    "from rasterio.enums import Resampling\n",
+    "import rioxarray as riox\n",
+    "import utils.geodata as geodata\n",
+    "import utils.gee as gee\n",
+    "import utils.gdal as gdal\n",
+    "from PreprocessingConfig import PreprocessingConfig\n",
     "from tqdm.notebook import tqdm\n",
-    "from visualize import plot_traits\n",
+    "\n",
+    "from visualize import plot_traits, plot_rasterio\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -53,7 +47,7 @@
     "ee.Initialize()\n",
     "\n",
     "# Load configuration\n",
-    "config = Config()"
+    "config = PreprocessingConfig()"
    ]
   },
   {
@@ -83,9 +77,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inat_fns_2deg = config.iNat_fns(\"2\")\n",
+    "if config.plot_traits:\n",
+    "    inat_fns_2deg = config.iNat_fns(\"2\")\n",
     "\n",
-    "plot_traits(inat_fns_2deg, 4)"
+    "    plot_traits(inat_fns_2deg, 4)"
    ]
   },
   {
@@ -104,14 +99,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trait_fns = config.iNat_fns()\n",
+    "trait_fns = config.iNat_fns\n",
     "\n",
     "trait_gdfs = []\n",
     "for trait_fn in trait_fns:\n",
-    "    gdf = utils.tif2gdf(trait_fn)\n",
+    "    gdf = geodata.tif2gdf(trait_fn)\n",
     "    trait_gdfs.append(gdf)\n",
     "\n",
-    "trait_gdfs = utils.merge_gdfs(trait_gdfs)\n",
+    "trait_gdfs = geodata.merge_gdfs(trait_gdfs)\n",
     "trait_gdfs.head(5)"
    ]
   },
@@ -136,28 +131,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a4d19b8",
+   "id": "ca10be62",
    "metadata": {},
    "outputs": [],
    "source": [
-    "bio_vars = [1, 4, 7, 12, 13, 14, 15]\n",
-    "bio_fns = config.WC_fns(bio_vars)\n",
+    "if config.resamp_to_disk:\n",
+    "    # Downsample MODIS data and save to disk\n",
+    "    fns_og = sorted(glob.glob(os.path.join(config.WC_dir, \"10_min/*.tif\")))\n",
     "\n",
-    "bios = []\n",
-    "for bio_fn in bio_fns:\n",
-    "    name = os.path.splitext(os.path.basename(bio_fn))[0]\n",
-    "    bio = rx.open_rasterio(bio_fn, masked=True)\n",
-    "    bio.name = name\n",
-    "    bios.append(bio)\n",
-    "\n",
-    "scale_factor = 1/3\n",
-    "bios = [utils.resample_raster(bio, scale_factor) for bio in bios]"
+    "    for f in fns_og:\n",
+    "        base = os.path.splitext(os.path.basename(f))[0].split(\"10m\")\n",
+    "        base = base[0] + \"0.5_deg\" + base[-1]\n",
+    "        out_fn = os.path.join(config.WC_dir, \"0.5_deg\", f\"{base}.tif\")\n",
+    "        ds = gdal.resample_gdal(f, out_fn)\n",
+    "        del ds"
    ]
   },
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "046606a9",
+   "id": "1184b967",
    "metadata": {},
    "source": [
     "Convert to GeoDataFrames and merge"
@@ -166,11 +159,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "433fbfdd",
+   "id": "7a4d19b8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "bio_gdfs = utils.merge_gdfs([utils.tif2gdf(bio) for bio in bios])\n",
+    "bio_fns = config.WC_fns\n",
+    "\n",
+    "bios = []\n",
+    "for bio_fn in bio_fns:\n",
+    "    name = os.path.splitext(os.path.basename(bio_fn))[0]\n",
+    "    bio = riox.open_rasterio(bio_fn, masked=True)\n",
+    "    bio.name = name\n",
+    "    bios.append(bio)\n",
+    "    \n",
+    "bio_gdfs = geodata.merge_gdfs([geodata.tif2gdf(bio) for bio in bios])\n",
     "bio_gdfs.head(5)"
    ]
   },
@@ -223,25 +225,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get MODIS Terra Surface Reflectance image collection for its first year of operation\n",
-    "# (2000-03-01 - 2001-03-01)\n",
-    "ds, de = \"2000-03-01\", \"2001-03-02\"\n",
-    "bands = [\"sur_refl_b01\", \"sur_refl_b02\", \"sur_refl_b03\", \"sur_refl_b04\", \"sur_refl_b05\"]\n",
-    "modis_tsr = ee.ImageCollection(\"MODIS/061/MOD09GA\").filterDate(ds, de)\n",
+    "if config.gee_export:\n",
+    "    # Get MODIS Terra Surface Reflectance image collection for its first year of operation\n",
+    "    # (2000-03-01 - 2001-03-01)\n",
+    "    ds, de = \"2000-03-01\", \"2001-03-02\"\n",
+    "    bands = [\"sur_refl_b01\", \"sur_refl_b02\", \"sur_refl_b03\", \"sur_refl_b04\", \"sur_refl_b05\"]\n",
+    "    modis_tsr = ee.ImageCollection(\"MODIS/061/MOD09GA\").filterDate(ds, de)\n",
     "\n",
-    "# Mask clouds\n",
-    "qa_band = \"state_1km\"\n",
-    "modis_tsr_masked = utils.mask_clouds(modis_tsr, qa_band)\n",
+    "    # Mask clouds\n",
+    "    qa_band = \"state_1km\"\n",
+    "    modis_tsr_masked = gee.mask_clouds(modis_tsr, qa_band)\n",
     "\n",
-    "# Aggregate the image collection into monthly averages for each band\n",
-    "tsr_bands_monthly = []\n",
-    "for band in bands:\n",
-    "    monthly = utils.aggregate_ic(modis_tsr_masked.select(band), ds, de)\n",
-    "    tsr_bands_monthly.append(monthly)\n",
-    "    \n",
-    "# Export images to Google Drive\n",
-    "for band in tsr_bands_monthly:\n",
-    "    utils.export_collection(band, \"MODIS\")"
+    "    # Aggregate the image collection into monthly averages for each band\n",
+    "    tsr_bands_monthly = []\n",
+    "    for band in bands:\n",
+    "        monthly = gee.aggregate_ic(modis_tsr_masked.select(band), ds, de)\n",
+    "        tsr_bands_monthly.append(monthly)\n",
+    "        \n",
+    "    # Export images to Google Drive\n",
+    "    for band in tsr_bands_monthly:\n",
+    "        gee.export_collection(band, \"MODIS\")"
    ]
   },
   {
@@ -250,16 +253,7 @@
    "id": "07c7c667",
    "metadata": {},
    "source": [
-    "5. Merge semi-global observations for each band/month"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "6b5980e0",
-   "metadata": {},
-   "source": [
-    "See `utils/merge_files.py`"
+    "5. Merge semi-global observations for each band/month (See `scripts/merge_files.py`)"
    ]
   },
   {
@@ -278,25 +272,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Downsample MODIS data and save to disk\n",
-    "fns_1km = sorted(glob.glob(os.path.join(config.MODIS_dir, \"1km/*.tif\")))\n",
+    "if config.resamp_to_disk:\n",
+    "    # Downsample MODIS data and save to disk\n",
+    "    fns_1km = sorted(glob.glob(os.path.join(config.MODIS_dir, \"1km/*.tif\")))\n",
     "\n",
-    "for f in fns_1km:\n",
-    "    base = os.path.splitext(os.path.basename(f))[0].split(\"_1000m\")[0]\n",
-    "    kwargs = {\n",
-    "        \"format\": \"GTiff\",\n",
-    "        \"xRes\": 0.5,\n",
-    "        \"yRes\": 0.5,\n",
-    "        \"resampleAlg\": \"cubic\",\n",
-    "        \"creationOptions\": [\n",
-    "            \"TILED=YES\",\n",
-    "            \"COMPRESS=DEFLATE\",\n",
-    "            \"PREDICTOR=2\",\n",
-    "        ]\n",
-    "    }\n",
-    "    out_fn = os.path.join(config.MODIS_dir, \"0.5_deg\", f\"{base}_0.5_deg.tif\")\n",
-    "    ds = gdal.Warp(out_fn, f, **kwargs)\n",
-    "    del ds"
+    "    for f in tqdm(fns_1km):\n",
+    "        base = os.path.splitext(os.path.basename(f))[0].split(\"_1000m\")[0]\n",
+    "        out_fn = os.path.join(config.MODIS_dir, \"0.5_deg\", f\"{base}_0.5_deg.tif\")\n",
+    "        ds = gdal.resample_gdal(f, out_fn)\n",
+    "        del ds"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "6c3df7c6",
+   "metadata": {},
+   "source": [
+    "7. Convert to GeoDataFrames and merge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b9539d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modis_fns = config.MODIS_fns\n",
+    "\n",
+    "modis = []\n",
+    "for modis_fn in modis_fns:\n",
+    "    name = os.path.splitext(os.path.basename(modis_fn))[0]\n",
+    "    obs = riox.open_rasterio(modis_fn, masked=True)\n",
+    "    obs.name = name\n",
+    "    modis.append(obs)\n",
+    "\n",
+    "modis_gdfs = geodata.merge_gdfs([geodata.tif2gdf(obs) for obs in modis])\n",
+    "modis_gdfs.head(5)"
    ]
   },
   {
@@ -343,31 +356,69 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load so# Downsample MODIS data and save to disk\n",
-    "p_dirs = sorted(glob.glob(os.path.join(config.soil_dir, \"*\")))\n",
-    "# fns_1km = sorted(glob.glob(os.path.join(config.MODIS_dir, \"1km/*.tif\")))\n",
+    "if config.resamp_to_disk:\n",
+    "    # Downsample soil data and save to disk\n",
+    "    p_dirs = sorted(glob.glob(os.path.join(config.soil_dir, \"*\")))\n",
     "\n",
-    "for d in p_dirs:\n",
-    "    fns_1km = sorted(glob.glob(os.path.join(d, \"1km/*.tif\")))\n",
+    "    for d in p_dirs:\n",
+    "        fns_1km = sorted(glob.glob(os.path.join(d, \"1km/*.tif\")))\n",
     "\n",
-    "    for f in fns_1km:\n",
-    "        base = os.path.splitext(os.path.basename(f))[0].split(\"_1000m\")[0]\n",
-    "        kwargs = {\n",
-    "            \"format\": \"GTiff\",\n",
-    "            \"xRes\": 0.5,\n",
-    "            \"yRes\": 0.5,\n",
-    "            \"dstSRS\": \"EPSG:4326\",\n",
-    "            \"resampleAlg\": \"cubic\",\n",
-    "            \"creationOptions\": [\n",
-    "                \"TILED=YES\",\n",
-    "                \"COMPRESS=DEFLATE\",\n",
-    "                \"PREDICTOR=2\",\n",
-    "            ]\n",
-    "        }\n",
-    "        out_fn = os.path.join(d, \"0.5_deg\", f\"{base}_0.5_deg.tif\")\n",
-    "        # print(out_fn)\n",
-    "        ds = gdal.Warp(out_fn, f, **kwargs)\n",
-    "        del ds"
+    "        for f in fns_1km:\n",
+    "            base = os.path.splitext(os.path.basename(f))[0].split(\"_1000m\")[0]\n",
+    "            out_fn = os.path.join(d, \"0.5_deg\", f\"{base}_0.5_deg.tif\")\n",
+    "            # print(out_fn)\n",
+    "            ds = gdal.resample_gdal(f, out_fn)\n",
+    "            del ds"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "8409b8e1",
+   "metadata": {},
+   "source": [
+    "4. Convert to GeoDataFrames and merge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f496a89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soil_fns = config.soil_fns\n",
+    "\n",
+    "soils = []\n",
+    "for soil_fn in soil_fns:\n",
+    "    name = os.path.splitext(os.path.basename(soil_fn))[0]\n",
+    "    obs = riox.open_rasterio(soil_fn, masked=True)\n",
+    "    obs.name = name\n",
+    "    soils.append(obs)\n",
+    "\n",
+    "soil_gdfs = geodata.merge_gdfs([geodata.tif2gdf(obs) for obs in soils])\n",
+    "soil_gdfs.head(5)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "a9e9640f",
+   "metadata": {},
+   "source": [
+    "# Combine all into a single GeoDataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bb73a14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_gdfs = geodata.merge_gdfs([trait_gdfs, bio_gdfs, modis_gdfs, soil_gdfs])\n",
+    "print(\"Combined dataframe shape:\", all_gdfs.shape)\n",
+    "all_gdfs.head()"
    ]
   }
  ],
