--- a/2-TrainModel.ipynb
+++ b/2-TrainModel.ipynb
@@ -20,36 +20,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
-    "import os\n",
-    "\n",
-    "import rioxarray as riox\n",
-    "\n",
-    "import utils\n",
-    "from TrainModelConfig import Config\n",
+    "from TrainModelConfig import TrainModelConfig\n",
+    "from utils.data_retrieval import all_gdfs\n",
     "\n",
     "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Load configuration"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "config = Config()"
+    "%autoreload 2\n",
+    "\n",
+    "config = TrainModelConfig()"
    ]
   },
   {
@@ -61,81 +51,20 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### iNaturalist trait maps"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "trait_gdfs = []\n",
-    "for trait_fn in config.iNat_fns():\n",
-    "    gdf = utils.tif2gdf(trait_fn)\n",
-    "    trait_gdfs.append(gdf)\n",
+    "X_fns = config.WC_fns + config.MODIS_fns + config.soil_fns\n",
+    "y_fns = config.iNat_fns\n",
     "\n",
-    "trait_gdfs = utils.merge_gdfs(trait_gdfs)\n",
-    "trait_gdfs.head(2)"
+    "X = all_gdfs(X_fns)\n",
+    "y = all_gdfs(y_fns)"
    ]
   },
   {
    "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## WorldClim"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Load the tifs and resample to 0.5 degrees"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bio_vars = [1, 4, 7, 12, 13, 14, 15]\n",
-    "\n",
-    "bios = []\n",
-    "for bio_fn in config.WC_fns(bio_vars):\n",
-    "    name = os.path.splitext(os.path.basename(bio_fn))[0]\n",
-    "    bio = riox.open_rasterio(bio_fn, masked=True)\n",
-    "    bio.name = name\n",
-    "    bios.append(bio)\n",
-    "\n",
-    "scale_factor = 1/3\n",
-    "bios = [utils.resample_raster(bio, scale_factor) for bio in bios]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Convert to GeoDataFrames and merge"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bio_gdfs = utils.merge_gdfs([utils.tif2gdf(bio) for bio in bios])\n",
-    "bio_gdfs.head(2)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -144,14 +73,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bio_13 = bio_gdfs.loc[:, [\"bio_13\" in x for x in bio_gdfs.columns]].values\n",
-    "bio_14 = bio_gdfs.loc[:, [\"bio_14\" in x for x in bio_gdfs.columns]].values\n",
-    "bio_gdfs[\"wc2.1_10m_bio_13-14\"] = bio_13 - bio_14\n",
-    "bio_gdfs.head(2)"
+    "bio_13 = X.loc[:, [\"bio_13\" in x for x in X.columns]].values\n",
+    "bio_14 = X.loc[:, [\"bio_14\" in x for x in X.columns]].values\n",
+    "X[\"wc2.1_10m_bio_13-14\"] = bio_13 - bio_14"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Drop the unnecessary `band`, `spatial_ref`, and `geometry` columns."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = X.drop(columns=[\"band\", \"spatial_ref\", \"geometry\"])\n",
+    "y = y.drop(columns=[\"band\", \"spatial_ref\", \"geometry\"])"
    ]
   },
   {
