Begin XGB preprocessing

--- a/2-TrainModel.ipynb
+++ b/2-TrainModel.ipynb
@@ -20,21 +20,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import xgboost as xgb\n",
     "from TrainModelConfig import TrainModelConfig\n",
     "from utils.data_retrieval import all_gdfs\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -52,15 +46,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_fns = config.WC_fns + config.MODIS_fns + config.soil_fns\n",
-    "y_fns = config.iNat_fns\n",
+    "Y_fns = config.iNat_fns\n",
     "\n",
     "X = all_gdfs(X_fns)\n",
-    "y = all_gdfs(y_fns)"
+    "Y = all_gdfs(Y_fns)"
    ]
   },
   {
@@ -73,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,12 +86,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "X = X.drop(columns=[\"band\", \"spatial_ref\", \"geometry\"])\n",
-    "y = y.drop(columns=[\"band\", \"spatial_ref\", \"geometry\"])"
+    "Y = Y.drop(columns=[\"band\", \"spatial_ref\", \"geometry\"])"
    ]
   },
   {
@@ -106,6 +100,57 @@
    "metadata": {},
    "source": [
     "## XGBoost"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### To-Dos:\n",
+    "\n",
+    "1. remove all rows (lat/lon coords) in the features that don't correspond with a non-null cell in the current trait map\n",
+    "2. standardize the feature data by removing the mean and centering to the std\n",
+    "3. identify optimal hyperparams with a grid search + cross-validation\n",
+    "4. train models for each trait using optimized hyperparams + cross-validation"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Drop NaNs from labels and convert dataframes to numpy arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_np = X.to_numpy()\n",
+    "Y_np = Y.dropna().to_numpy()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Split into train and test and convert data into DMatrices for XGBoost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, Y_train, Y_test = train_test_split(X_np, Y_np, test_size=2.0)\n",
+    "\n",
+    "D_train = xgb.DMatrix(X_train, label=Y_train)\n",
+    "D_test = xgb.DMatrix(X_test, label=Y_test)"
    ]
   }
  ],
