--- a/2-TrainModel.ipynb
+++ b/2-TrainModel.ipynb
@@ -20,9 +20,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import xgboost as xgb\n",
     "from TrainModelConfig import TrainModelConfig\n",
@@ -33,7 +42,16 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "config = TrainModelConfig()"
+    "config = TrainModelConfig()\n",
+    "\n",
+    "\n",
+    "def print_shapes(X, Y, rows_dropped=True) -> None:\n",
+    "    print(\"X shape:\", X.shape)\n",
+    "    print(\"Y shape:\", Y.shape)\n",
+    "    \n",
+    "    if rows_dropped:\n",
+    "        rows = abs(Y.shape[0] - X.shape[0])\n",
+    "        print(\"Rows dropped:\", rows)"
    ]
   },
   {
@@ -46,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,17 +99,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Drop the unnecessary `band`, `spatial_ref`, and `geometry` columns."
+    "Drop the unnecessary `x`, `y`, `band` and `spatial_ref` columns."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = X.drop(columns=[\"band\", \"spatial_ref\", \"geometry\"])\n",
-    "Y = Y.drop(columns=[\"band\", \"spatial_ref\", \"geometry\"])"
+    "X = X.drop(columns=[\"x\", \"y\", \"band\", \"spatial_ref\"])\n",
+    "Y = Y.drop(columns=[\"x\", \"y\", \"band\", \"spatial_ref\"])"
    ]
   },
   {
@@ -107,12 +125,226 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### To-Dos:\n",
+    "To-Dos:\n",
     "\n",
-    "1. remove all rows (lat/lon coords) in the features that don't correspond with a non-null cell in the current trait map\n",
-    "2. standardize the feature data by removing the mean and centering to the std\n",
-    "3. identify optimal hyperparams with a grid search + cross-validation\n",
-    "4. train models for each trait using optimized hyperparams + cross-validation"
+    "1. Match predictors with response variable(s) (just use one variable at first to test all the folllowing steps)\n",
+    "2. Remove all-null predictors/response vars\n",
+    "3. ~~Standardize the data~~ Not actually necessary for tree-based models!\n",
+    "4. Divide into spatial CV splits\n",
+    "5. Exclude location columns\n",
+    "6. Test out training\n",
+    "7. Identify optimal hyperparams with grid search + spatial CV\n",
+    "8. Repeat training, but remove ANY rows with NA"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use just one response variable while developing the methodology. In this case, use specific leaf area (SLA)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>y</th>\n",
+       "      <th>x</th>\n",
+       "      <th>geometry</th>\n",
+       "      <th>iNat_SLA_05deg_ln</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>89.75</td>\n",
+       "      <td>-179.75</td>\n",
+       "      <td>POINT (-179.75000 89.75000)</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>89.75</td>\n",
+       "      <td>-179.25</td>\n",
+       "      <td>POINT (-179.25000 89.75000)</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>89.75</td>\n",
+       "      <td>-178.75</td>\n",
+       "      <td>POINT (-178.75000 89.75000)</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>89.75</td>\n",
+       "      <td>-178.25</td>\n",
+       "      <td>POINT (-178.25000 89.75000)</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>89.75</td>\n",
+       "      <td>-177.75</td>\n",
+       "      <td>POINT (-177.75000 89.75000)</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       y       x                     geometry  iNat_SLA_05deg_ln\n",
+       "0  89.75 -179.75  POINT (-179.75000 89.75000)                NaN\n",
+       "1  89.75 -179.25  POINT (-179.25000 89.75000)                NaN\n",
+       "2  89.75 -178.75  POINT (-178.75000 89.75000)                NaN\n",
+       "3  89.75 -178.25  POINT (-178.25000 89.75000)                NaN\n",
+       "4  89.75 -177.75  POINT (-177.75000 89.75000)                NaN"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Y = Y[[\"geometry\", \"iNat_SLA_05deg_ln\"]]\n",
+    "\n",
+    "# Drop response variable NAs\n",
+    "Y = Y.dropna()\n",
+    "\n",
+    "Y.head(5)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>1. Match predictors with response variable</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X shape: (23178, 132)\n",
+      "Y shape: (23178, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = X.loc[X[\"geometry\"].isin(Y[\"geometry\"])]\n",
+    "print_shapes(X, Y)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>2. Remove all-NA predictors</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X shape: (23166, 130)\n",
+      "Y shape: (23178, 2)\n",
+      "Rows dropped: 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = X.dropna(subset=X.columns.difference([\"geometry\"]), how=\"all\")\n",
+    "print_shapes(X, Y)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>3. Standardize the data by centering to the mean and scaling to the STD (skipped because not actually necessary for tree-based models)</p>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>4. Divide into geographic splits for spatial K-fold cross-validation</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'asPolygon' from 'shapely.geometry' (/home/lusk/mambaforge/envs/traits/lib/python3.9/site-packages/shapely/geometry/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[64], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mspacv\u001b[39;00m\n\u001b[1;32m      4\u001b[0m XYs \u001b[39m=\u001b[39m X[\u001b[39m\"\u001b[39m\u001b[39mgeometry\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[1;32m      5\u001b[0m skcv \u001b[39m=\u001b[39m spacv\u001b[39m.\u001b[39mSKCV()\u001b[39m.\u001b[39msplit(XYs)\n",
+      "File \u001b[0;32m~/mambaforge/envs/traits/lib/python3.9/site-packages/spacv/__init__.py:5\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39m`spacv`: spatial cross-validation in Python\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mspacv\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[1;32m      7\u001b[0m __version__ \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m0.0.22\u001b[39m\u001b[39m\"\u001b[39m\n",
+      "File \u001b[0;32m~/mambaforge/envs/traits/lib/python3.9/site-packages/spacv/spacv.py:7\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcluster\u001b[39;00m \u001b[39mimport\u001b[39;00m MiniBatchKMeans\n\u001b[1;32m      6\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mbase_classes\u001b[39;00m \u001b[39mimport\u001b[39;00m BaseSpatialCV\n\u001b[0;32m----> 7\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mgrid_builder\u001b[39;00m \u001b[39mimport\u001b[39;00m construct_blocks, assign_pt_to_grid\n\u001b[1;32m      8\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mutils\u001b[39;00m \u001b[39mimport\u001b[39;00m geometry_to_2d, convert_geodataframe, load_custom_polygon\n\u001b[1;32m     10\u001b[0m __all__ \u001b[39m=\u001b[39m [\n\u001b[1;32m     11\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mHBLOCK\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m     12\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mSKCV\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m     13\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mRepeatedSKCV\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m     14\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mUserDefinedSCV\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     15\u001b[0m ]\n",
+      "File \u001b[0;32m~/mambaforge/envs/traits/lib/python3.9/site-packages/spacv/grid_builder.py:3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mgeopandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mgpd\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mshapely\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mgeometry\u001b[39;00m \u001b[39mimport\u001b[39;00m Polygon, asPolygon\n\u001b[1;32m      4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcollections\u001b[39;00m \u001b[39mimport\u001b[39;00m PolyCollection\n\u001b[1;32m      5\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mneighbors\u001b[39;00m \u001b[39mimport\u001b[39;00m BallTree\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'asPolygon' from 'shapely.geometry' (/home/lusk/mambaforge/envs/traits/lib/python3.9/site-packages/shapely/geometry/__init__.py)"
+     ]
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import spacv\n",
+    "\n",
+    "XYs = X[\"geometry\"]\n",
+    "skcv = spacv.SKCV().split(XYs)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Old"
    ]
   },
   {
