WIP - visualize spatial folds

--- a/2-TrainModel.ipynb
+++ b/2-TrainModel.ipynb
@@ -20,18 +20,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import xgboost as xgb\n",
     "from TrainModelConfig import TrainModelConfig\n",
@@ -51,7 +42,10 @@
     "    \n",
     "    if rows_dropped:\n",
     "        rows = abs(Y.shape[0] - X.shape[0])\n",
-    "        print(\"Rows dropped:\", rows)"
+    "        if rows == 0:\n",
+    "            print(\"Rows match\\n\\n\")\n",
+    "        else:\n",
+    "            print(\"Rows dropped:\", rows, \"\\n\\n\")"
    ]
   },
   {
@@ -64,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,90 +141,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>y</th>\n",
-       "      <th>x</th>\n",
-       "      <th>geometry</th>\n",
-       "      <th>iNat_SLA_05deg_ln</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>89.75</td>\n",
-       "      <td>-179.75</td>\n",
-       "      <td>POINT (-179.75000 89.75000)</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>89.75</td>\n",
-       "      <td>-179.25</td>\n",
-       "      <td>POINT (-179.25000 89.75000)</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>89.75</td>\n",
-       "      <td>-178.75</td>\n",
-       "      <td>POINT (-178.75000 89.75000)</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>89.75</td>\n",
-       "      <td>-178.25</td>\n",
-       "      <td>POINT (-178.25000 89.75000)</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>89.75</td>\n",
-       "      <td>-177.75</td>\n",
-       "      <td>POINT (-177.75000 89.75000)</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       y       x                     geometry  iNat_SLA_05deg_ln\n",
-       "0  89.75 -179.75  POINT (-179.75000 89.75000)                NaN\n",
-       "1  89.75 -179.25  POINT (-179.25000 89.75000)                NaN\n",
-       "2  89.75 -178.75  POINT (-178.75000 89.75000)                NaN\n",
-       "3  89.75 -178.25  POINT (-178.25000 89.75000)                NaN\n",
-       "4  89.75 -177.75  POINT (-177.75000 89.75000)                NaN"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Y = Y[[\"geometry\", \"iNat_SLA_05deg_ln\"]]\n",
     "\n",
@@ -250,18 +163,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "X shape: (23178, 132)\n",
-      "Y shape: (23178, 4)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "X = X.loc[X[\"geometry\"].isin(Y[\"geometry\"])]\n",
     "print_shapes(X, Y)"
@@ -272,26 +176,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>2. Remove all-NA predictors</p>"
+    "<p>2. Remove all-NA predictors and match response variable with new predictors</p>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "X shape: (23166, 130)\n",
-      "Y shape: (23178, 2)\n",
-      "Rows dropped: 12\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "X = X.dropna(subset=X.columns.difference([\"geometry\"]), how=\"all\")\n",
+    "print_shapes(X, Y)\n",
+    "\n",
+    "Y = Y.loc[Y[\"geometry\"].isin(X[\"geometry\"])]\n",
     "print_shapes(X, Y)"
    ]
   },
@@ -313,30 +210,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'asPolygon' from 'shapely.geometry' (/home/lusk/mambaforge/envs/traits/lib/python3.9/site-packages/shapely/geometry/__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[64], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mspacv\u001b[39;00m\n\u001b[1;32m      4\u001b[0m XYs \u001b[39m=\u001b[39m X[\u001b[39m\"\u001b[39m\u001b[39mgeometry\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[1;32m      5\u001b[0m skcv \u001b[39m=\u001b[39m spacv\u001b[39m.\u001b[39mSKCV()\u001b[39m.\u001b[39msplit(XYs)\n",
-      "File \u001b[0;32m~/mambaforge/envs/traits/lib/python3.9/site-packages/spacv/__init__.py:5\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39m`spacv`: spatial cross-validation in Python\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mspacv\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[1;32m      7\u001b[0m __version__ \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m0.0.22\u001b[39m\u001b[39m\"\u001b[39m\n",
-      "File \u001b[0;32m~/mambaforge/envs/traits/lib/python3.9/site-packages/spacv/spacv.py:7\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcluster\u001b[39;00m \u001b[39mimport\u001b[39;00m MiniBatchKMeans\n\u001b[1;32m      6\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mbase_classes\u001b[39;00m \u001b[39mimport\u001b[39;00m BaseSpatialCV\n\u001b[0;32m----> 7\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mgrid_builder\u001b[39;00m \u001b[39mimport\u001b[39;00m construct_blocks, assign_pt_to_grid\n\u001b[1;32m      8\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mutils\u001b[39;00m \u001b[39mimport\u001b[39;00m geometry_to_2d, convert_geodataframe, load_custom_polygon\n\u001b[1;32m     10\u001b[0m __all__ \u001b[39m=\u001b[39m [\n\u001b[1;32m     11\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mHBLOCK\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m     12\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mSKCV\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m     13\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mRepeatedSKCV\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m     14\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mUserDefinedSCV\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     15\u001b[0m ]\n",
-      "File \u001b[0;32m~/mambaforge/envs/traits/lib/python3.9/site-packages/spacv/grid_builder.py:3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mgeopandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mgpd\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mshapely\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mgeometry\u001b[39;00m \u001b[39mimport\u001b[39;00m Polygon, asPolygon\n\u001b[1;32m      4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcollections\u001b[39;00m \u001b[39mimport\u001b[39;00m PolyCollection\n\u001b[1;32m      5\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mneighbors\u001b[39;00m \u001b[39mimport\u001b[39;00m BallTree\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'asPolygon' from 'shapely.geometry' (/home/lusk/mambaforge/envs/traits/lib/python3.9/site-packages/shapely/geometry/__init__.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import spacv\n",
     "\n",
     "XYs = X[\"geometry\"]\n",
-    "skcv = spacv.SKCV().split(XYs)\n"
+    "skcv = spacv.SKCV()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 0\n",
+    "for train, test in skcv.split(XYs):\n",
+    "    XYs[test].plot()\n",
+    "    \n",
+    "plt.show()"
    ]
   },
   {
