--- a/2-TrainModel.ipynb
+++ b/2-TrainModel.ipynb
@@ -24,28 +24,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import geopandas as gpd\n",
     "import xgboost as xgb\n",
-    "from TrainModelConfig import TrainModelConfig\n",
-    "from utils.data_retrieval import all_gdfs\n",
+    "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
+    "from TrainModelConfig import TrainModelConfig\n",
+    "from utils.data_retrieval import all_gdfs\n",
+    "from utils.visualize import plot_splits\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "config = TrainModelConfig()\n",
-    "\n",
-    "\n",
-    "def print_shapes(X, Y, rows_dropped=True) -> None:\n",
-    "    print(\"X shape:\", X.shape)\n",
-    "    print(\"Y shape:\", Y.shape)\n",
-    "    \n",
-    "    if rows_dropped:\n",
-    "        rows = abs(Y.shape[0] - X.shape[0])\n",
-    "        if rows == 0:\n",
-    "            print(\"Rows match\\n\\n\")\n",
-    "        else:\n",
-    "            print(\"Rows dropped:\", rows, \"\\n\\n\")"
+    "config = TrainModelConfig()"
    ]
   },
   {
@@ -123,7 +114,7 @@
     "\n",
     "1. Match predictors with response variable(s) (just use one variable at first to test all the folllowing steps)\n",
     "2. Remove all-null predictors/response vars\n",
-    "3. ~~Standardize the data~~ Not actually necessary for tree-based models!\n",
+    "3. ~~Standardize the data~~ *Not actually necessary for tree-based models!*\n",
     "4. Divide into spatial CV splits\n",
     "5. Exclude location columns\n",
     "6. Test out training\n",
@@ -218,7 +209,9 @@
     "import spacv\n",
     "\n",
     "XYs = X[\"geometry\"]\n",
-    "skcv = spacv.SKCV()"
+    "skcv = spacv.SKCV(n_splits=10, buffer_radius=10)\n",
+    "\n",
+    "plot_splits(skcv, XYs)"
    ]
   },
   {
@@ -227,11 +220,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "i = 0\n",
-    "for train, test in skcv.split(XYs):\n",
-    "    XYs[test].plot()\n",
-    "    \n",
-    "plt.show()"
+    "from spacv.grid_builder import construct_blocks\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "construct_blocks(X, method='random', tiles_x=10, tiles_y=10, n_groups=3).plot(column='grid_id', ax=ax, edgecolor='black', cmap='viridis')"
    ]
   },
   {
