WIP - autocorrelation and variogram testing

--- a/2-TrainModel.ipynb
+++ b/2-TrainModel.ipynb
@@ -200,6 +200,100 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4.1 Generate variograms to determine block size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import skgstat as skg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "XYs = X[\"geometry\"]\n",
+    "coords = np.asarray(list(map(lambda x : (x.x, x.y), XYs)))\n",
+    "values = X[\"wc2.1_0.5_deg_bio_1\"].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coords = coords[~np.isnan(values)]\n",
+    "values = values[~np.isnan(values)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "V = skg.Variogram(coordinates=coords, values=values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(V)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "V.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import spacv\n",
+    "from spacv.visualisation import plot_autocorrelation_ranges\n",
+    "import numpy as np\n",
+    "\n",
+    "# df = gpd.read_file('/opt/conda/lib/python3.7/site-packages/libpysal/examples/baltim/baltim.shp')\n",
+    "\n",
+    "# XYs = df['geometry']\n",
+    "# cols = ['NROOM', 'PRICE', 'AGE', 'SQFT']\n",
+    "# X = df[cols]\n",
+    "# y = df['PATIO']\n",
+    "\n",
+    "XYs = X[\"geometry\"]\n",
+    "x = X[[\"wc2.1_0.5_deg_bio_1\"]]\n",
+    "\n",
+    "# xys = XYs.iloc[~np.isnan(x).values]\n",
+    "# x = x[~np.isnan(x).values]\n",
+    "\n",
+    "lags = np.arange(0, 400, 50)\n",
+    "bw = 5\n",
+    "\n",
+    "plot_autocorrelation_ranges(XYs, X[X.columns.difference([\"geometry\"])], lags, bw)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
