Calc autocorrelation ranges and split geographic data

--- a/2-TrainModel.ipynb
+++ b/2-TrainModel.ipynb
@@ -25,12 +25,15 @@
    "outputs": [],
    "source": [
     "import geopandas as gpd\n",
+    "import numpy as np\n",
+    "import spacv\n",
     "import xgboost as xgb\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
+    "from spacv.visualisation import plot_autocorrelation_ranges\n",
     "from TrainModelConfig import TrainModelConfig\n",
     "from utils.data_retrieval import all_gdfs\n",
+    "from utils.geodata import print_shapes\n",
     "from utils.visualize import plot_splits\n",
     "\n",
     "%load_ext autoreload\n",
@@ -208,12 +211,53 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Drop column`soc_60-100cm_mean_0.5_deg` because it contains all NaNs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import skgstat as skg"
+    "X = X.dropna(axis=1, how=\"all\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get median autocorrelation range of all predictors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if config.SAVE_RANGES:\n",
+    "    XYs = X[\"geometry\"]\n",
+    "    degree = 111.325\n",
+    "    upper = np.round(degree * 120)\n",
+    "    step = np.round(degree * 6)\n",
+    "    bw = step // 2\n",
+    "    lags = np.arange(0, upper, step)\n",
+    "\n",
+    "    ranges = plot_autocorrelation_ranges(\n",
+    "        XYs, X[X.columns.difference([\"geometry\"])], lags, bw, dist_func=\"haversine\"\n",
+    "    )\n",
+    "\n",
+    "    np.save(\"ranges.npy\", np.asarray(ranges))\n",
+    "else:\n",
+    "    ranges = np.load(\"ranges.npy\")\n",
+    "\n",
+    "print(\"Median range:\", np.median(ranges))"
    ]
   },
   {
@@ -223,101 +267,25 @@
    "outputs": [],
    "source": [
     "XYs = X[\"geometry\"]\n",
-    "coords = np.asarray(list(map(lambda x : (x.x, x.y), XYs)))\n",
-    "values = X[\"wc2.1_0.5_deg_bio_1\"].values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "coords = coords[~np.isnan(values)]\n",
-    "values = values[~np.isnan(values)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "V = skg.Variogram(coordinates=coords, values=values)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(V)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "V.plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import spacv\n",
-    "from spacv.visualisation import plot_autocorrelation_ranges\n",
-    "import numpy as np\n",
+    "med = 2521.42\n",
+    "degree = 111.325\n",
+    "tile = med / degree\n",
+    "tiles_x = int(np.round(360 / tile))\n",
+    "tiles_y = int(np.round(180 / tile))\n",
     "\n",
-    "# df = gpd.read_file('/opt/conda/lib/python3.7/site-packages/libpysal/examples/baltim/baltim.shp')\n",
+    "hblock = spacv.HBLOCK(\n",
+    "    tiles_x,\n",
+    "    tiles_y,\n",
+    "    shape=\"hex\",\n",
+    "    method=\"optimized_random\",\n",
+    "    buffer_radius=2,\n",
+    "    n_groups=10,\n",
+    "    data=X[X.columns.difference([\"geometry\"])],\n",
+    "    n_sims=50,\n",
+    "    distance_metric=\"haversine\",\n",
+    ")\n",
     "\n",
-    "# XYs = df['geometry']\n",
-    "# cols = ['NROOM', 'PRICE', 'AGE', 'SQFT']\n",
-    "# X = df[cols]\n",
-    "# y = df['PATIO']\n",
-    "\n",
-    "XYs = X[\"geometry\"]\n",
-    "x = X[[\"wc2.1_0.5_deg_bio_1\"]]\n",
-    "\n",
-    "# xys = XYs.iloc[~np.isnan(x).values]\n",
-    "# x = x[~np.isnan(x).values]\n",
-    "\n",
-    "lags = np.arange(0, 400, 50)\n",
-    "bw = 5\n",
-    "\n",
-    "plot_autocorrelation_ranges(XYs, X[X.columns.difference([\"geometry\"])], lags, bw)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import spacv\n",
-    "\n",
-    "XYs = X[\"geometry\"]\n",
-    "skcv = spacv.SKCV(n_splits=10, buffer_radius=10)\n",
-    "\n",
-    "plot_splits(skcv, XYs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from spacv.grid_builder import construct_blocks\n",
-    "\n",
-    "fig, ax = plt.subplots()\n",
-    "construct_blocks(X, method='random', tiles_x=10, tiles_y=10, n_groups=3).plot(column='grid_id', ax=ax, edgecolor='black', cmap='viridis')"
+    "plot_splits(hblock, XYs)"
    ]
   },
   {
