formatting and make config variables clearer

--- a/2-TrainModel.ipynb
+++ b/2-TrainModel.ipynb
@@ -152,7 +152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>1. Match predictors with response variable</p>"
+    "<p><h3>1. Match predictors with response variable</h3></p>"
    ]
   },
   {
@@ -170,7 +170,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>2. Remove all-NA predictors and match response variable with new predictors</p>"
+    "<p><h3>2. Remove all-NA predictors and match response variable with new predictors</h3></p>"
    ]
   },
   {
@@ -191,7 +191,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>3. Standardize the data by centering to the mean and scaling to the STD (skipped because not actually necessary for tree-based models)</p>"
+    "<p><h3>3. Standardize the data by centering to the mean and scaling to the STD</h3></p>\n",
+    "\n",
+    "*(skipped because not actually necessary for tree-based models)*"
    ]
   },
   {
@@ -199,7 +201,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>4. Divide into geographic splits for spatial K-fold cross-validation</p>"
+    "<p><h3>4. Divide into geographic splits for spatial K-fold cross-validation</h3></p>"
    ]
   },
   {
@@ -207,7 +209,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4.1 Generate variograms to determine block size"
+    "#### 4.1 Generate variograms to determine block size"
    ]
   },
   {
@@ -241,7 +243,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if config.SAVE_RANGES:\n",
+    "if config.SAVE_AUTOCORRELATION_RANGES:\n",
     "    XYs = X[\"geometry\"]\n",
     "    degree = 111.325\n",
     "    upper = np.round(degree * 120)\n",
@@ -258,6 +260,14 @@
     "    ranges = np.load(\"ranges.npy\")\n",
     "\n",
     "print(\"Median range:\", np.median(ranges))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.2 Plot splits using median autocorrelation range"
    ]
   },
   {
@@ -278,11 +288,12 @@
     "    tiles_y,\n",
     "    shape=\"hex\",\n",
     "    method=\"optimized_random\",\n",
-    "    buffer_radius=2,\n",
+    "    buffer_radius=0.5,\n",
     "    n_groups=10,\n",
     "    data=X[X.columns.difference([\"geometry\"])],\n",
     "    n_sims=50,\n",
     "    distance_metric=\"haversine\",\n",
+    "    random_state=config.RNG_STATE\n",
     ")\n",
     "\n",
     "plot_splits(hblock, XYs)"
