--- a/2-TrainModel.ipynb
+++ b/2-TrainModel.ipynb
@@ -29,7 +29,8 @@
     "import spacv\n",
     "import xgboost as xgb\n",
     "\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.metrics import mean_squared_error\n",
     "from spacv.visualisation import plot_autocorrelation_ranges\n",
     "from TrainModelConfig import TrainModelConfig\n",
     "from utils.data_retrieval import all_gdfs\n",
@@ -304,6 +305,100 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### </p>5. Identify optimal parameters with `GridSearchCV`</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_np = X[X.columns.difference([\"geometry\"])].to_numpy()\n",
+    "Y_np = Y[Y.columns.difference([\"geometry\"])].to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "D_X = xgb.DMatrix(X_np)\n",
+    "D_Y = xgb.DMatrix(Y_np)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Parameter optimization\")\n",
+    "xgb_model = xgb.XGBRegressor(n_jobs=2)\n",
+    "clf = GridSearchCV(\n",
+    "    xgb_model,\n",
+    "    {\"max_depth\": [2], \"n_estimators\": [105]},\n",
+    "    verbose=1,\n",
+    "    n_jobs=2,\n",
+    "    cv=hblock.split(XYs),\n",
+    ")\n",
+    "clf.fit(X_np, Y_np)\n",
+    "print(clf.best_score_)\n",
+    "print(clf.best_params_)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```shell\n",
+    "Parameter optimization\n",
+    "Fitting 10 folds for each of 9 candidates, totalling 90 fits\n",
+    "0.2543011237254429\n",
+    "{'max_depth': 2, 'n_estimators': 200}\n",
+    "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6. Train model with spatial CV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_np = X[X.columns.difference([\"geometry\"])].to_numpy()\n",
+    "Y_np = Y[Y.columns.difference([\"geometry\"])].to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for train_index, test_index in hblock.split(XYs):\n",
+    "    xgb_model = xgb.XGBRegressor(\n",
+    "        n_estimators=105, max_depth=2, n_jobs=2, random_state=config.RNG_STATE\n",
+    "    ).fit(X_np[train_index], Y_np[train_index], verbose=2)\n",
+    "    predictions = xgb_model.predict(X_np[test_index])\n",
+    "    actuals = Y_np[test_index]\n",
+    "    print(mean_squared_error(actuals, predictions))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Old"
    ]
   },
@@ -362,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
